hphp/test/slow/reified_generics/incorrect-num-reified-extends-1.php.expectf
Fatal error: Class C expects 1 reified generic but 2 given in %s on line 6
